--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -33,7 +33,7 @@
       </ion-item>
   
       <ion-item>
-          <ion-label stacked>Modalidade</ion-label>
+          <ion-label stacked>Esporte favorito</ion-label>
         <ion-select  type="text" [(ngModel)]="perfil.modalidadeFav" stacked>
            <ion-option value="Basquete">Basquete</ion-option>
             <ion-option value="Futebol">Futebol</ion-option>
@@ -45,7 +45,7 @@
       </ion-item>
   
       <ion-item>
-        <ion-label stacked>Posição</ion-label>
+        <ion-label stacked>Posição preferida</ion-label>
         <ion-input type="text" [(ngModel)]="perfil.posFav"></ion-input>
       </ion-item>
   
