--- a/src/pages/info-pelada/info-pelada.html
+++ b/src/pages/info-pelada/info-pelada.html
@@ -30,5 +30,8 @@
     <p>{{participante.nome}}</p>
   </ion-item>
 
-  <div class="btn"><button class="btn-save" (tap)="addParticipante(pelada)" >Participar</button></div> 
+
+  <div class="btn" *ngFor="let perfil of perfis | async">
+    <button class="btn-save" (tap)="addParticipante(pelada,perfil.nome)" >Participar</button>
+  </div> 
 </ion-content>
